7 Apr 2006: Wouter
	- modified the kill_nsd tpkg so that it waits up to 10x5 secs
	  for nsd to make the pid file, and it wait up to 10x5 secs for
	  nsd to exit after the kill signal is given.

6 Apr 2006: Wouter
	- notify handler passes acl number that matches to xfrd.
	- xfrd keeps a next_master for a zone, and sets it after notify.
	  when notified nsd will try to contact the master that sent
	  the notify, if send from an address that is both in acl
	  allow-notify and request-xfr.
	- xfrd closes its tcp and udp sockets on exit.
	- default names for diff file and xfrd state nicer.
	- fixed up kill nsd grep on ps.
	- fixed up race conditions in test script for kill nsd
	  wait for pid file creation by nsd, and grep -v grep in check.
	- in nsd signal-flags inherited from the parent are zeroed 
	  when a server_child starts. Also the server_child switches back
	  to NSD_RUN mode when a bad mode happens.
	- check if ixfrs start from the version in memory.
	- if IXFR/AXFR ends in a serial that is newer than the serial
	  that was sent in an notify, update the notified serial.

5 Apr 2006: Wouter
	- added lowerbound for retry timeout.
	- added extra assertions to xfrd-tcp.c, saying that the waiting line
	  for tcp connections must be empty if the counter is below max.
	- setup so that the first master tried is the first in acl list.
	- diff file skips OPT and TSIG RRs if they are put into the answer
	  section.
	- if IXFR contains an RR to delete that does not exist, nothing
	  happens.
	- update zone for NS, RRSIG also if multiple RRs in the rrset.
	- difffile: create zone struct also if domain exists already.
	- difffile: destroy temp region on error.
	- difffile: in delete_RR, create temp region outside of the routine,
	  so no alloc region, destroy region for every deleted RR.
	- difffile: for IXFR: do not delete final SOA RR.
	- difffile: unknown parts in file is an error.
	- difffile: EOF on last packet is ignored w/o giving an error.

4 Apr 2006: Wouter